--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,9 +161,9 @@ section {
   padding: 20px 0;
 }
 .header.header-scrolled {
-  background: #fff;
+  background: transparent;
   padding: 15px 0;
-  box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
+  /* box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1); */
 }
 .header .logo {
   line-height: 0;
@@ -432,7 +432,7 @@ section {
 @media (max-width: 991px) {
   .hero {
     height: auto;
-    padding: 120px 0 60px 0;
+    padding: 160px 0 60px 0;
   }
   .hero .hero-img {
     text-align: center;
